--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -23,5 +23,36 @@
     "emailPasswordButton": "Use email & password",
     "appleButton": "Continue with Apple",
     "alreadyHaveAnAccount": "Already have an account?",
-    "logIn": "Log in"
+    "logIn": "Log in",
+    "likeCount": "{count}",
+    "@likeCount": {
+      "description": "Anything you want",
+      "placeholders": {
+        "count": {
+          "type": "int",
+          "format": "compact"
+        }
+      }
+    },
+    "commentCount": "{count}",
+    "@commentCount": {
+      "description": "Anything you want",
+      "placeholders": {
+        "count": {
+          "type": "int",
+          "format": "compact"
+        }
+      }
+    },
+    "commentTitle": "{value} {value2, plural, =1{comment} other{comments}}",
+    "@commentTitle": {
+      "description": "Anything you want",
+      "placeholders": {
+        "value": {
+          "type": "int",
+          "format": "compact"
+        }
+      }
+    }
   }
+  
